test_src/compiler_errors/types/arithmetic/ModBoolError4.b
class ModBoolError4 {
    void test() {
        Bool value = true;
        println(value %= 2);
    }
}
